Bug 787134 - Make links not in a document or with an invalid href respond to :link selector.  r=bzbarsky