content/base/src/Link.h
@@ -28,8 +28,6 @@ class Link : public nsISupports
 public:
   NS_DECLARE_STATIC_IID_ACCESSOR(MOZILLA_DOM_LINK_IMPLEMENTATION_IID)
 
-  static const nsLinkState defaultState = eLinkState_Unknown;
-
   /**
    * aElement is the element pointer corresponding to this link.
    */
@@ -77,7 +75,7 @@ public:
    *        true if ResetLinkState should notify the owning document about style
    *        changes or false if it should not.
    */
-  void ResetLinkState(bool aNotify);
+  void ResetLinkState(bool aNotify, bool aHasHref);
   
   // This method nevers returns a null element.
   Element* GetElement() const { return mElement; }
@@ -102,6 +100,8 @@ public:
 
   virtual size_t
     SizeOfExcludingThis(nsMallocSizeOfFun aMallocSizeOf) const;
+
+  bool ElementHasHref() const;
 
 protected:
   virtual ~Link();
@@ -140,6 +140,8 @@ private:
   nsCOMPtr<IHistory> mHistory;
 
   uint16_t mLinkState;
+
+  bool mNeedsRegistration;
 
   bool mRegistered;
 };
